<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/competition_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_outer"
    android:orientation="vertical"
    android:padding="5dp">

    <View
        style="@style/Divider"
        android:background="@color/colorAccent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/competition_detail_picture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/ic_unknown"
            android:scaleType="fitXY" />

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/competition_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="80"
            android:text="@string/example_competitionName"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        style="@style/Divider"
        android:background="@color/colorAccent" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/title_competitors_list"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/competition_detail_competitors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textIsSelectable="true" />

    <View
        style="@style/Divider"
        android:background="@color/colorAccent" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/title_achievement_list"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/competition_detail_achievements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textIsSelectable="true" />

    <View
        style="@style/Divider"
        android:background="@color/colorAccent" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/title_reward_row_list"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/competition_detail_rewards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textIsSelectable="true" />

    <View
        style="@style/Divider"
        android:background="@color/colorAccent" />

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/title_progress_row_list"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/competition_detail_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textIsSelectable="true" />

    <View
        style="@style/Divider"
        android:background="@color/colorAccent" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/competition_list_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical">

        <android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/competition_detail_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:tooltipText="@string/competition_update_hint"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@drawable/ic_settings" />

        <android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/competition_detail_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:tooltipText="@string/competition_clone_hint"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:fabSize="normal"
            app:layout_anchorGravity="bottom|right|end"
            app:srcCompat="@drawable/ic_copy" />

    </RelativeLayout>
</LinearLayout>